<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/txtSegundaActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_resultado_aparece_aqui"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtrai"
        android:layout_marginTop="15dp" />

</LinearLayout>